# ai-agent-platform

./: .gitignore  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  result.xlsx
.cursor/rules/: logging-required.mdc  no-hardcoding.mdc
.cursor/skills/agent-skill/: SKILL.md
.cursor/skills/architectural-skill/: SKILL.md
.cursor/skills/change-docs-skill/: SKILL.md
.cursor/skills/coding-skill/: SKILL.md
.cursor/skills/database-skill/: SKILL.md
.cursor/skills/devops-skill/: SKILL.md
.cursor/skills/documentation-skill/: SKILL.md
.cursor/skills/error-handling-skill/: SKILL.md
.cursor/skills/memory-skill/: SKILL.md
.cursor/skills/security-skill/: SKILL.md
alembic/: env.py
alembic/versions/: 6d25a1ea8253_initial_tables.py  a1b2c3d4e5f6_add_pending_clarifications.py  b2c3d4e5f6a7_add_pending_code_approvals.py  c3d4e5f6a7b8_add_scheduled_tasks.py
database/: __init__.py  connection.py
docs/: advanced-roadmap.md  agents-and-tools.md  api-reference.md  architecture.md  development.md
platform_queue/: __init__.py  task_queue.py
services/agents/: __init__.py  analysis_agent.py  base_agent.py  chat_agent.py  code_agent.py  generator_agent.py  monitor_agent.py  plan_execute_agent.py  registry.py  research_agent.py  scheduler_agent.py
services/delivery/: __init__.py  delivery_service.py
services/gateway/: Dockerfile  input_processor.py  main.py  pending_clarification_manager.py  session_manager.py
services/orchestrator/: Dockerfile  main.py
services/scheduler/: __init__.py  scheduler_service.py
services/workers/: Dockerfile  worker_service.py
shared/: circuit_breaker.py  code_approval_context.py  llm.py  logging_config.py  metrics.py  models.py  pending_code_approval_manager.py  preference_inference.py  rate_limit.py  retry.py  supervisor_interface.py
shared/mcp/: __init__.py  client.py  server.py
shared/models/: __init__.py  base.py  pending_clarification.py  pending_code_approval.py  scheduled_task.py  schemas.py  session.py  workflow.py
shared/tools/: __init__.py  web_search.py
tests/: __init__.py  conftest.py  test_agents.py  test_api.py  test_code_executor.py  test_email_sender.py  test_file_io.py  test_llm.py  test_mcp_server.py  test_models.py  test_orchestrator_client.py  test_orchestrator_routes.py  test_pending_clarification.py  test_pending_code_approval.py  test_research_agent.py  test_scheduler.py  test_supervisor_nodes.py  test_task_runner.py  test_url_scraper.py  test_web_search.py
ui/: app.js  index.html  styles.css
(+38 files in other folders)
