[project]
name = "ai-agent-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.1",
    "langchain>=1.2.12",
    "langgraph>=1.1.1",
    "pydantic>=2.12.5",
    "redis>=7.3.0",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.15.5",
]
